// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTimeRow render with minimal props 1`] = `
<div
  className="tasks-time-row"
>
  <span
    className="time-label"
  >
    With focus on last
  </span>
  <TimeDropDown
    className=""
    id="tasks-dashboard-time-period-dropdown"
    onChange={[Function]}
    selectedTime="H24"
  />
</div>
`;

exports[`TasksTimeRow render with props 1`] = `
<div
  className="tasks-time-row"
>
  <span
    className="time-label"
  >
    With focus on last
  </span>
  <TimeDropDown
    className=""
    id="tasks-dashboard-time-period-dropdown"
    onChange={[MockFunction]}
    selectedTime="WEEK"
  />
</div>
`;
